--- a/package.json
+++ b/package.json
@@ -9,8 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uiw/react-md-editor": "^3.23.3",
+    "date-fns": "^2.30.0",
+    "luxon": "^3.3.0",
     "next": "13.4.4",
+    "next-remove-imports": "^1.0.11",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-share": "^4.4.1",
+    "swr": "^2.1.5"
+  },
+  "devDependencies": {
+    "styled-components": "^5.3.10"
   }
 }
