--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-share": "^4.4.1",
+    "sharp": "^0.32.1",
     "swr": "^2.1.5"
   },
   "devDependencies": {
