--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 8000",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start -p 8000",
     "lint": "next lint"
   },
@@ -14,6 +15,7 @@
     "luxon": "^3.3.0",
     "next": "13.4.4",
     "next-remove-imports": "^1.0.11",
+    "next-sitemap": "^4.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
