--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "solodevhub-next",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.14.0",
+    "npm": "8.3.1"
+},
   "scripts": {
     "dev": "next dev -p 8000",
     "build": "next build",
