--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@uiw/react-md-editor": "^3.23.3",
     "date-fns": "^2.30.0",
     "luxon": "^3.3.0",
-    "next": "13.4.4",
+    "next": "^13.4.4",
     "next-remove-imports": "^1.0.11",
     "next-sitemap": "^4.1.3",
     "react": "18.2.0",
