--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "next dev -p 8000",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "start": "next start",
+    "start": "next start -p 4000",
     "lint": "next lint"
   },
   "dependencies": {
