--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "sst bind next dev",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
